// import React from 'react';
// import { render } from '@testing-library/react-native';

// import Icon from './index';

// describe('Icon', () => {
//     it('When passing one of the names to return Icon and match snapshot', () => {
//         const component = render(<Icon name="chevron-down" />);
//         expect(component).toMatchSnapshot();
//     });

//     it('When passing color use it in icon', () => {
//         const component = render(<Icon name="chevron-left" color={'#ccc'} />);
//         expect(component).toMatchSnapshot();
//     });

//     it('When adding style use it in icon', () => {
//         const component = render(<Icon name="chevron-up" style={{ marginTop: 16 }} />);
//         expect(component).toMatchSnapshot();
//     });
// });
